--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-wrapper">
             <a class="header-logo-link" href="/">
-                <img class="header-logo" src="/images/belkare-logo.jpg">
+                <img class="header-logo" src="./images/belkare-logo.jpg">
             </a>
             <nav>
             </nav>
