contact us section added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belkare Agro</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
 </head>
 
@@ -23,7 +26,7 @@
     <main>
         <section class="our-shops-section">
             <div class="our-shops-heading">
-                <h2 class="our-shops-title">OUR SHOPS</h2>
+                <h2 class="our-shops-title">OUR BRANCHS</h2>
                 <p class="our-shops-description body-text">We have our presence throughout <strong>Central Karnataka</strong> region.</p>
             </div>
             <div class="our-shops-list">
@@ -58,6 +61,48 @@
                             being limited by linear PDFs or PowerPoints. Hidden navigation and speaker notes mean you’ll
                             always be the smartest person in the room.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact-us-section">
+            <h2 class="contact-us-heading">CONTACT US</h2>
+            <p class="contact-us-description body-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Image from </p>
+            <div class="contact-us-list">
+                <div class="contact">
+                    <div class="contact-main">
+                        <span class="contact-image">
+                            <img src="./images/contact-location.png" alt="">
+                        </span>
+                        <h3 class="contact-title h3">Office</h3>
+                    </div>
+                    <div class="contact-description">
+                        <p class="body-text">Come say hello at our office HQ.</p>
+                        <a class="body-text" href="geo:37.786971,-122.399677">121 Rock Sreet, 21 Avenue, New York, NY 92103-9000</a>
+                    </div>
+                </div>
+                <div class="contact">
+                    <div class="contact-main">
+                        <span class="contact-image">
+                            <img src="./images/contact-phone.png" alt="">
+                        </span>
+                        <h3 class="contact-title h3">Phone</h3>
+                    </div>
+                    <div class="contact-description">
+                        <p class="body-text">Mon - Fri from 8 AM to 9 PM.</p>
+                        <a class="body-text" href="tel:+91 00000 00000">+91 00000 00000</a>
+                    </div>
+                </div>
+                <div class="contact">
+                    <div class="contact-main">
+                        <span class="contact-image">
+                            <img src="./images/contact-mail.png" alt="">
+                        </span>
+                        <h3 class="contact-title h3">Mail us</h3>
+                    </div>
+                    <div class="contact-description">
+                        <p class="body-text">Our friendly team is here to help.</p>
+                        <a class="body-text" href="mailto:hi@ourcompany.com">hi@ourcompany.com</a>
                     </div>
                 </div>
             </div>
