contant us updated

--- a/index.html
+++ b/index.html
@@ -67,42 +67,42 @@
         </section>
         <section class="contact-us-section">
             <h2 class="contact-us-heading">CONTACT US</h2>
-            <p class="contact-us-description body-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Image from </p>
+            <p class="contact-us-description body-text">Want to get in touch? We would love to hear from you. Here's how you can reach us...</p>
             <div class="contact-us-list">
                 <div class="contact">
                     <div class="contact-main">
                         <span class="contact-image">
-                            <img src="./images/contact-location.png" alt="">
+                            <img src="./images/contact-location.png" alt="contact locaion">
                         </span>
                         <h3 class="contact-title h3">Office</h3>
                     </div>
                     <div class="contact-description">
-                        <p class="body-text">Come say hello at our office HQ.</p>
-                        <a class="body-text" href="geo:37.786971,-122.399677">121 Rock Sreet, 21 Avenue, New York, NY 92103-9000</a>
+                        <p class="body-text">Davanagere Industrial Area Lokikere, road, Davanagere, Karnataka 577004</p>
+                        <a class="body-text" href="https://maps.app.goo.gl/5fjYdwKuZJYzLvuC8">View on Google Map</a>
                     </div>
                 </div>
                 <div class="contact">
                     <div class="contact-main">
                         <span class="contact-image">
-                            <img src="./images/contact-phone.png" alt="">
+                            <img src="./images/contact-phone.png" alt="contact phone">
                         </span>
                         <h3 class="contact-title h3">Phone</h3>
                     </div>
                     <div class="contact-description">
-                        <p class="body-text">Mon - Fri from 8 AM to 9 PM.</p>
-                        <a class="body-text" href="tel:+91 00000 00000">+91 00000 00000</a>
+                        <p class="body-text">Our team is available Monday through Saturday from 8:00 AM to 9:00 PM.</p>
+                        <a class="body-text" href="tel:+91 00000 00000">+91 82772 53999</a>
                     </div>
                 </div>
                 <div class="contact">
                     <div class="contact-main">
                         <span class="contact-image">
-                            <img src="./images/contact-mail.png" alt="">
+                            <img src="./images/contact-mail.png" alt="contact mail">
                         </span>
-                        <h3 class="contact-title h3">Mail us</h3>
+                        <h3 class="contact-title h3">Email us</h3>
                     </div>
                     <div class="contact-description">
-                        <p class="body-text">Our friendly team is here to help.</p>
-                        <a class="body-text" href="mailto:hi@ourcompany.com">hi@ourcompany.com</a>
+                        <p class="body-text">For any questions you may have, you can always reach out to us by email.</p>
+                        <a class="body-text" href="mailto:belkereagro@gmail.com">belkereagro@gmail.com</a>
                     </div>
                 </div>
             </div>
